bynkc/tests/fixtures/negative/299_http_cache_on_non_get/src/api.bynk
context api

type View = { ok: Bool }

service api from http {
  @cache(maxAge: 5.minutes)
  on POST("/items") (body: View) -> Effect[HttpResult[View]] by Visitor {
    Ok(body)
  }
}
